   then use displayed text of home screen item.
2. For LMS9.0 when click on queue/now-playing 'Random Mix' icon show start-mix
   dialog.
3. Fix mix types - these don't end in 's', i.e. 'track' not 'tracks'
4. If no name entered into 'Random Mix' dialog then save should just update
   current settings.
5. Only allow 'Play now' action for random mixes.
6. Handle renaming if random mixes.

5.2.1
-----
1. Fix permissions of Hungarian translations file.
2. Rename Hungarian translation files from "hu-hu" to "hu"
3. Try to ensure random mixes have "safe" names by replacing any question mark,
   less/greater than, back/forward slashes, colon, or asterisk characters with
   underscores, and removing any semi-colon, single/double quote, tab, or
   new-line characters.
4. Fix empty home screen if random mix pinned and showing a list.
5. Add menu to 'Random Mix' dialog with option to pin start-mix dialog to home
   screen.

5.2.0
-----
 1. Add support for LMS 9.0 user defined roles.
 2. Allow to save 'Random Mix' configs for later use, and list these when open
    'Random Mix'.
 3. Remove 'Stop' button from 'Random Mix' dialog, as can be stopped elsewhere.
 4. Allow 'Random mixes' to be pinned to home screen.
 5. Add option to use full page for now-playing backdrop, i.e. extend into top
    toolbar and (on mobile) bottom navigation bar.
 6. Add slight shadow to now-playing image.
 7. On desktop layout auto-switch to now-playing when use 'Play now' action, as
    per mobile layout.
 8. If bottom padding is added then adjust desktop now-playing bar for this.
 9. Add option to replace mobile navigation bar with now-playing bar.
10. Fix swiping on lists with only 1 item.
11. Add Hungarian translation - thanks to Ambrits Tamás.
12. Add release-type icons to album headers in MAI view.
13. Fix colour of queue button in now-playing bar when using light themes with
    coloured toolbars.
14. Fix alignment of album times when using album style queue.