@@ -9,6 +9,8 @@
    current settings.
 5. Only allow 'Play now' action for random mixes.
 6. Handle renaming if random mixes.
+7. If using whole view for now-playing background and using wide desktop
+   layout, then place cover vertically in the middle.
 
 5.2.1
 -----
